# Raptor-X

./: .gitignore  .gitmodules  GEMMA + PRESET-MANAGER INTEGRATION PLAN.md  PROJECT_DOCUMENTATION.md  future plans.txt  game-verification-2026-01-10.md  gemma-preset-integration-prompt.md  plan.md  rpx_installer.py  setup.bat  setup.py  start-all.bat  start-all.ps1  start-rpx.bat  test_pull.py
Gemma/: .gitignore  README.md  added_simple_automation.py  backend_server_guide.md  gemma_benchmark.db  gemma_sut_service.py  gui_app.py  main.py  pyproject.toml  requirements.txt  run_backend.py  suts_registry.db
Gemma/admin/: index.html  package-lock.json  package.json  vite.config.ts
Gemma/admin/src/: App.tsx  index.css  main.tsx
Gemma/admin/src/api/: adminApi.ts  index.ts  presetManager.ts  queueService.ts  workflowBuilder.ts
Gemma/admin/src/components/: ActiveRunsPanel.tsx  AutomationTimeline.tsx  CollapsiblePanel.tsx  DataTable.tsx  ErrorBoundary.tsx  FleetStatusPanel.tsx  GameCard.tsx  GameLibraryPanel.tsx  LogViewer.tsx  MetricCard.tsx  MultiSUTPanel.tsx  PreflightChecks.tsx  PresetMatrix.tsx  QuickLaunchPanel.tsx  RadialGauge.tsx  RecentRunsTable.tsx  RunCard.tsx  RunMetricsPanel.tsx  RunTimeline.tsx  SUTCard.tsx  SUTDetailPanel.tsx  ServiceStatus.tsx  SnakeTimeline.tsx  SparklineChart.tsx  StatusBadge.tsx  WorkflowLibrary.tsx  index.ts
Gemma/admin/src/contexts/: ToastContext.tsx
Gemma/admin/src/hooks/: index.ts  useAdminConfig.ts  useCampaigns.ts  useDevices.ts  useGames.ts  useInstalledGames.ts  useMultiSUTCampaigns.ts  useRuns.ts  useServiceHealth.ts  useSystemStatus.ts  useWebSocket.ts  useWorkflowBuilder.ts
Gemma/admin/src/pages/: Dashboard.tsx  Devices.tsx  Games.tsx  Runs.tsx  Settings.tsx  WorkflowBuilder.tsx  index.ts
Gemma/admin/src/types/: admin.ts  index.ts
Gemma/admin/src/utils/: cpuCodenames.ts
Gemma/backend/: __init__.py  __main__.py  main.py
Gemma/backend/api/: __init__.py  admin_routes.py  routes.py
Gemma/backend/communication/: __init__.py  omniparser_client.py  sut_client.py  websocket_handler.py
Gemma/backend/core/: __init__.py  account_pool.py  account_scheduler.py  automation_orchestrator.py  campaign_manager.py  config.py  controller.py  events.py  game_manager.py  log_collector.py  multi_sut_scheduler.py  run_manager.py  run_storage.py  timeline_manager.py
Gemma/backend/database/: __init__.py  database_manager.py
Gemma/backend/discovery/: __init__.py  device_registry.py  network_utils.py  sut_discovery.py
Gemma/config/: ac-mirage-legacy.yml  steam_dialogs.yaml
Gemma/config/apps/: paint.yaml
Gemma/config/games/: ac-mirage.yaml  black-myth-wukong.yaml  bmw.yaml  civilization-6.yml  counter-strike-2.yaml  cyberpunk-2077.yaml  cyberpunk2077.yaml  dota-2.yaml  f1-24.yaml  far-cry-6.yaml  far-cry6.yml  ff-xiv-dawntrail.yaml  final-fantasy-xiv-dawntrail.yaml  handle-windows-updates.yaml  hitman-3.yaml  hitman-3.yml  hitman3.yaml  horizon-zero-dawn-remastered.yaml  hzd-R.yml  mirage.yaml  rdr2.yaml  red-dead-redemption-2.yaml  shadow-of-the-tomb-raider.yaml  sotr.yaml  sottr.yml  steam_dialogs.yaml  tinytina.yaml  ttw.yml
Gemma/config/games/backup/: hitman-3.yml  sotr.yaml
Gemma/config/misc/: cs2.yaml  fc6-legacy.yaml  hitman-3.yml  mirage.yaml  steam_dialogs.yaml  tinytina.yaml
Gemma/modules/: config_parser.py  decision_engine.py  discovery_client.py  game_launcher.py  network.py  omniparser_client.py  preset_manager_client.py  queue_service_client.py  screenshot.py  simple_automation.py  simple_config_parser.py  ui_elements.py
queue_service/: README.md  pyproject.toml
queue_service/src/queue_service/: __init__.py  __main__.py  config.py  main.py  queue_manager.py
queue_service/src/queue_service/api/: __init__.py  health.py  parse.py  stats.py
queue_service/src/queue_service/dashboard/: __init__.py  rich_ui.py
service_manager/: pyproject.toml
service_manager/src/gemma_service_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
service_manager/src/service_manager/: __init__.py  __main__.py  config.py  main.py  settings.py
service_manager/src/service_manager/services/: __init__.py  process_manager.py
sut_client/: README.md  pyproject.toml  restarter.bat
sut_client/src/sut_client/: __init__.py  __main__.py  applier.py  backup.py  config.py  discovery.py  hardware.py  input_controller.py  launcher.py  service.py  service.py.backup_standalone  ssh_key_manager.py  ssh_ops.py  ssh_setup.py  steam.py  system.py  update_handler.py  window.py  ws_client.py
sut_discovery_service/: README.md  pyproject.toml
sut_discovery_service/src/sut_discovery_service/: __init__.py  __main__.py  config.py  main.py
(+149 files in other folders)
