[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemma"
version = "2.0.0"
description = "Gemma - Game Automation Platform with SUT Communication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
    "python-socketio>=5.10.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gemma = "backend:main"
gemma-backend = "backend:main"

[tool.hatch.build.targets.wheel]
packages = ["backend", "modules"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
