[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pml-sut-client"
version = "0.3.0"
description = "Raptor X SUT Client - Gaming Automation Service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SiV Gaming Lab" }
]
keywords = ["gaming", "automation", "preset", "sut", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.3.0",
    "waitress>=3.0.0",  # Production WSGI server for Windows (handles concurrent requests)
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.50",
    "pywin32>=306",
    "pillow>=10.0.0",
    "vdf>=3.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "orjson>=3.9.0",
    "websockets>=12.0",
    "wmi>=1.5.1",
    # Window detection
    "pywinauto>=0.6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sut-client = "sut_client:main"
pml-sut = "sut_client:main"
ssh-ops = "sut_client.ssh_ops:main"

[project.urls]
Homepage = "https://github.com/sivgaming/preset-manager"
Repository = "https://github.com/sivgaming/preset-manager/tree/main/sut_client"

[tool.hatch.build.targets.wheel]
packages = ["src/sut_client"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
