[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sut-discovery-service"
version = "1.0.0"
description = "SUT Discovery Service - Central gateway for all SUT communication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
sut-discovery = "sut_discovery_service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sut_discovery_service"]
